# Simple-Feedback-Management-API

./: .env.example  README.md  api.http  manage.py  pyproject.toml
authentication/: models.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
feedback/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
feedback/management/commands/: populate_feedback.py
feedback/migrations/: 0001_initial.py
feedback_system/: asgi.py  settings.py  urls.py  wsgi.py
