[project]
name = "feedback-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]

[tool.ruff]
exclude = ["migrations", "populate_feedback.py"]
line-length = 119

[tool.ruff.lint]
extend-select = ["E501", "N", "R", "I"]
exclude = ["migrations", "populate_feedback.py"]

